--- a/colibre/auto_plotter/baryon_fractions.yml
+++ b/colibre/auto_plotter/baryon_fractions.yml
@@ -29,6 +29,9 @@ baryon_fraction_500:
     title: "Halo baryon fractions within $R_{500}$"
     caption: Baryon (gas + stars) fractions within $R_{500}$ normalised by the cosmic mean. These are 'true' values, i.e. no cut or observational correction was applied.
     section: Baryon Fractions
+  observational_data:
+    - filename: HaloMassBaryonFractions/Gonzalez2013.hdf5
+    - filename: HaloMassBaryonFractions/Zhang2011.hdf5
 
 gas_fraction_500_no_bias:
   type: "2dhistogram"
@@ -135,6 +138,10 @@ star_fraction_500:
     title: "Halo stellar fractions within $R_{500}$"
     caption: Stellar fractions within $R_{500}$ normalised by the cosmic mean. These are 'true' values, i.e. no cut or observational correction was applied.
     section: Baryon Fractions
+  observational_data:
+    - filename: HaloMassStellarFractions/Gonzalez2013.hdf5
+    - filename: HaloMassStellarFractions/Kravtsov2018.hdf5
+    - filename: HaloMassStellarFractions/Zhang2011.hdf5
 
 
 gas_mass_500:
