Add functionality for computing HeII CCDF

--- a/colibre/config.yml
+++ b/colibre/config.yml
@@ -501,22 +501,45 @@ scripts:
       yvar: Fe_SNIa_fraction
   - filename: scripts/column_density_distribution_function.py
     title:
-      - Column Density Distribution Function (full box, full range)
-      - Column Density Distribution Function (half box, full range)
-      - Column Density Distribution Function (full box, reduced range)
-      - Column Density Distribution Function (half box, reduced range)
+      - HI Column Density Distribution Function (full box, full range)
+      - HI Column Density Distribution Function (half box, full range)
+      - HI Column Density Distribution Function (full box, reduced range)
+      - HI Column Density Distribution Function (half box, reduced range)
     caption:
       - 'The column density distribution function of neutral hydrogen computed by projecting the entire box along the z-axis, corrected for the size of the box in redshift space.'
       - 'The column density distribution function of neutral hydrogen computed by splitting the box in half along the z-axis and projecting each half separately, also along the z-axis. Corrected for the size of the box in redshift space.'
       - 'The column density distribution function of neutral hydrogen computed by projecting the entire box along the z-axis, corrected for the size of the box in redshift space.'
       - 'The column density distribution function of neutral hydrogen computed by splitting the box in half along the z-axis and projecting each half separately, also along the z-axis. Corrected for the size of the box in redshift space.'
     output_file:
-      - column_density_distribution_function_chunk1_full_range.png
-      - column_density_distribution_function_chunk2_full_range.png
-      - column_density_distribution_function_chunk1_reduced_range.png
-      - column_density_distribution_function_chunk2_reduced_range.png
+      - column_density_distribution_function_chunk1_full_range_HI.png
+      - column_density_distribution_function_chunk2_full_range_HI.png
+      - column_density_distribution_function_chunk1_reduced_range_HI.png
+      - column_density_distribution_function_chunk2_reduced_range_HI.png
     section: Column Densities
     additional_arguments:
+      element: hydrogen
+      species: HI
+      parallel: True
+  - filename: scripts/column_density_distribution_function.py
+    title:
+      - HeII Column Density Distribution Function (full box, full range)
+      - HeII Column Density Distribution Function (half box, full range)
+      - HeII Column Density Distribution Function (full box, reduced range)
+      - HeII Column Density Distribution Function (half box, reduced range)
+    caption:
+      - 'The column density distribution function of singly-ionized helium computed by projecting the entire box along the z-axis, corrected for the size of the box in redshift space.'
+      - 'The column density distribution function of singly-ionized helium computed by splitting the box in half along the z-axis and projecting each half separately, also along the z-axis. Corrected for the size of the box in redshift space.'
+      - 'The column density distribution function of singly-ionized helium computed by projecting the entire box along the z-axis, corrected for the size of the box in redshift space.'
+      - 'The column density distribution function of singly-ionized helium computed by splitting the box in half along the z-axis and projecting each half separately, also along the z-axis. Corrected for the size of the box in redshift space.'
+    output_file:
+      - column_density_distribution_function_chunk1_full_range_HeII.png
+      - column_density_distribution_function_chunk2_full_range_HeII.png
+      - column_density_distribution_function_chunk1_reduced_range_HeII.png
+      - column_density_distribution_function_chunk2_reduced_range_HeII.png
+    section: Column Densities
+    additional_arguments:
+      element: helium
+      species: HeII
       parallel: True
   - filename: scripts/cosmic_SNIa_rate.py
     title: 'Cosmic SNIa rate'
