Add new observational data to GSMF and cosmic SFR plots

--- a/colibre/auto_plotter/mass_functions.yml
+++ b/colibre/auto_plotter/mass_functions.yml
@@ -26,6 +26,7 @@ stellar_mass_function_30:
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_30kpc.hdf5
     - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
 
 adaptive_stellar_mass_function_30:
   type: "adaptivemassfunction"
@@ -55,6 +56,7 @@ adaptive_stellar_mass_function_30:
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_30kpc.hdf5
     - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
 
 adaptive_stellar_mass_function_active_only_30:
   type: "adaptivemassfunction"
@@ -86,6 +88,7 @@ adaptive_stellar_mass_function_active_only_30:
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_30kpc.hdf5
     - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
 
 adaptive_stellar_mass_function_passive_only_30:
   type: "adaptivemassfunction"
@@ -118,6 +121,7 @@ adaptive_stellar_mass_function_passive_only_30:
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_30kpc.hdf5
     - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
 
 stellar_mass_function_50:
   type: "massfunction"
@@ -146,6 +150,7 @@ stellar_mass_function_50:
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_50kpc.hdf5
     - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
 
 stellar_mass_function_50_calibration:
   type: "massfunction"
@@ -167,6 +172,7 @@ stellar_mass_function_50_calibration:
   observational_data:
     - filename: GalaxyStellarMassFunction/Leja_2020.hdf5
     - filename: GalaxyStellarMassFunction/Driver2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
 
 adaptive_stellar_mass_function_50:
   type: "adaptivemassfunction"
@@ -195,6 +201,7 @@ adaptive_stellar_mass_function_50:
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_50kpc.hdf5
     - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
 
 adaptive_stellar_mass_function_50_calibration:
   type: "adaptivemassfunction"
@@ -216,6 +223,7 @@ adaptive_stellar_mass_function_50_calibration:
   observational_data:
     - filename: GalaxyStellarMassFunction/Leja_2020.hdf5
     - filename: GalaxyStellarMassFunction/Driver2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5 
 
 adaptive_stellar_mass_function_50_box_size_correction:
   type: "adaptivemassfunction"
@@ -245,6 +253,7 @@ adaptive_stellar_mass_function_50_box_size_correction:
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_50kpc.hdf5
     - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
 
 adaptive_stellar_mass_function_50_box_size_correction_calibration:
   type: "adaptivemassfunction"
@@ -267,6 +276,7 @@ adaptive_stellar_mass_function_50_box_size_correction_calibration:
   observational_data:
     - filename: GalaxyStellarMassFunction/Leja_2020.hdf5
     - filename: GalaxyStellarMassFunction/Driver2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
 
 
 adaptive_stellar_mass_function_passive_only_50:
@@ -299,6 +309,7 @@ adaptive_stellar_mass_function_passive_only_50:
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_50kpc.hdf5
     - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
 
 adaptive_stellar_mass_function_active_only_50:
   type: "adaptivemassfunction"
@@ -329,6 +340,7 @@ adaptive_stellar_mass_function_active_only_50:
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_50kpc.hdf5
     - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
 
 stellar_mass_function_with_scatter_50:
   type: "massfunction"
@@ -358,6 +370,7 @@ stellar_mass_function_with_scatter_50:
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_50kpc.hdf5
     - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
 
 stellar_mass_function_with_scatter_50_calibration:
   type: "massfunction"
@@ -379,6 +392,7 @@ stellar_mass_function_with_scatter_50_calibration:
   observational_data:
     - filename: GalaxyStellarMassFunction/Leja_2020.hdf5
     - filename: GalaxyStellarMassFunction/Driver2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
 
 adaptive_stellar_mass_function_with_scatter_50:
   type: "adaptivemassfunction"
@@ -408,6 +422,7 @@ adaptive_stellar_mass_function_with_scatter_50:
     - filename: GalaxyStellarMassFunction/FIREbox.hdf5
     - filename: GalaxyStellarMassFunction/Schaye2015_100_50kpc.hdf5
     - filename: GalaxyStellarMassFunction/Thorne2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
 
 adaptive_stellar_mass_function_with_scatter_50_calibration:
   type: "adaptivemassfunction"
@@ -429,3 +444,4 @@ adaptive_stellar_mass_function_with_scatter_50_calibration:
   observational_data:
     - filename: GalaxyStellarMassFunction/Leja_2020.hdf5
     - filename: GalaxyStellarMassFunction/Driver2021.hdf5
+    - filename: GalaxyStellarMassFunction/Navarro-Carrera2023.hdf5
